Include names & make names searchable
Removes the need for clicking "Get Text"

--- a/WildWorldItemId2TextWpf/WildWorldItemId2TextWpf.csproj
+++ b/WildWorldItemId2TextWpf/WildWorldItemId2TextWpf.csproj
@@ -94,5 +94,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Items.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
